--- a/gallery/Rusty.html
+++ b/gallery/Rusty.html
@@ -7,6 +7,14 @@
   <link rel="stylesheet" href="../stylesheet.css">
   <link href="https://fonts.googleapis.com/css?family=Montserrat:700,400&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Playfair+Display:400,700&display=swap" rel="stylesheet">
+  <link rel="icon" type="image/png" href="logo.png">
+    <script>
+    // Redirect to login.html if not logged in
+    if (!localStorage.getItem('isLoggedIn')) {
+      window.location.href = '../login.html';
+    }
+  </script>
+
   <style>
     body {
       background: #f9f9f2;
@@ -353,7 +361,7 @@
       <h2 class="gallery-category-heading" data-category-title="about">About Me</h2>
       <!-- About Me Section -->
       <section class="gallery-section-block" data-category="about">
-        <img class="gallery-section-img" src="../images/pic13.jpg" alt="About Me" data-full="../images/pic13.jpg">
+        <img class="gallery-section-img" src="../images/rusty.jpg" alt="About Me" data-full="../images/pic13.jpg">
         <div class="gallery-section-info">
           <div class="gallery-section-type">About Me</div>
           <h3 class="gallery-section-title">Rusty Pineda</h3>
