--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                 </div>
                 <div class="slide__bg" style="--bg: url(images/rusty.jpg); --dir: 0" data-current></div>
                 <!-- Slide 2 -->
-                <div class="slide" data-next data-link="gallery/edzel.html">
+                <div class="slide" data-next data-link="gallery/Edzel.html">
                   <div class="slide__inner">
                     <div class="slide--image__wrapper">
                       <img class="slide--image" src="images/edzel.jpg" alt="Edzel" />
@@ -96,7 +96,7 @@
                 </div>
                 <div class="slide__bg" style="--bg: url(images/edzel.jpg); --dir: 1" data-next></div>
                 <!-- Slide 3 -->
-                <div class="slide" data-previous data-link="gallery/kurt.html">
+                <div class="slide" data-previous data-link="gallery/Kurt.html">
                   <div class="slide__inner">
                     <div class="slide--image__wrapper">
                       <img class="slide--image" src="images/kurt.jpg" alt="Kurt" />
@@ -105,7 +105,7 @@
                 </div>
                 <div class="slide__bg" style="--bg: url(images/kurt.jpg); --dir: -1" data-previous></div>
                 <!-- Slide 4 -->
-                <div class="slide" data-link="gallery/xandru.html">
+                <div class="slide" data-link="gallery/Xandru.html">
                   <div class="slide__inner">
                     <div class="slide--image__wrapper">
                       <img class="slide--image" src="images/xandru.jpg" alt="Xandru" />
@@ -114,7 +114,7 @@
                 </div>
                 <div class="slide__bg" style="--bg: url(gallery/xandru.jpg); --dir: 2"></div>
                 <!-- Slide 5 -->
-                <div class="slide" data-link="gallery/carl.html">
+                <div class="slide" data-link="gallery/Carl.html">
                   <div class="slide__inner">
                     <div class="slide--image__wrapper">
                       <img class="slide--image" src="images/carl.jpg" alt="Carl" />
@@ -123,7 +123,7 @@
                 </div>
                 <div class="slide__bg" style="--bg: url(images/carl.jpg); --dir: 3"></div>
                 <!-- Slide 6 -->
-                <div class="slide" data-link="gallery/patrick.html">
+                <div class="slide" data-link="gallery/Patrick.html">
                   <div class="slide__inner">
                     <div class="slide--image__wrapper">
                       <img class="slide--image" src="images/cepres.jpg" alt="Patrick" />
