--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                     </div>
                   </div>
                 </div>
-                <div class="slide__bg" style="--bg: url(gallery/xandru.jpg); --dir: 2"></div>
+                <div class="slide__bg" style="--bg: url(images/xandru.jpg); --dir: 2"></div>
                 <!-- Slide 5 -->
                 <div class="slide" data-link="gallery/Carl.html">
                   <div class="slide__inner">
