Revert "Update index.html"
This reverts commit 5ded26987b7915c71446fd865790d9dab8bce45c.

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                     </div>
                   </div>
                 </div>
-                <div class="slide__bg" style="--bg: url(images/xandru.jpg); --dir: 2"></div>
+                <div class="slide__bg" style="--bg: url(gallery/xandru.jpg); --dir: 2"></div>
                 <!-- Slide 5 -->
                 <div class="slide" data-link="gallery/carl.html">
                   <div class="slide__inner">
