patch2.0 #comment newly added html

--- a/gallery/Kurt.html
+++ b/gallery/Kurt.html
@@ -331,10 +331,10 @@
         <span class="logo-title">Otium Elegentia</span>
       </div>
       <nav class="main-nav">
-        <a href="javascript:void(0);" class="nav-link" id="nav-home" onclick="window.location.href='/website/index.html'">Home</a>
-        <a href="javascript:void(0);" class="nav-link" id="nav-collections" onclick="window.location.href='/website/index.html#collections'">Collections</a>
-        <a href="javascript:void(0);" class="nav-link" id="nav-about" onclick="window.location.href='/website/index.html#about'">About us</a>
-        <a href="javascript:void(0);" class="nav-link" id="nav-contact" onclick="window.location.href='/website/index.html#contact'">Contact</a>
+        <a href="javascript:void(0);" class="nav-link" id="nav-home" onclick="window.location.href='../index.html'">Home</a>
+        <a href="javascript:void(0);" class="nav-link" id="nav-collections" onclick="window.location.href='../index.html#collections'">Collections</a>
+        <a href="javascript:void(0);" class="nav-link" id="nav-about" onclick="window.location.href='../index.html#about'">About us</a>
+        <a href="javascript:void(0);" class="nav-link" id="nav-contact" onclick="window.location.href='../index.html#contact'">Contact</a>
       </nav>
       <div class="nav-auth">
         <div class="nav-user" id="nav-user">
