--- a/gallery/Xandru.html
+++ b/gallery/Xandru.html
@@ -343,10 +343,10 @@
         <span class="logo-title">Otium Elegentia</span>
       </div>
       <nav class="main-nav">
-        <a href="/website/index.html" class="nav-link" id="nav-home">Home</a>
-        <a href="/website/index.html#collections" class="nav-link" id="nav-collections">Collections</a>
-        <a href="/website/index.html#about" class="nav-link" id="nav-about">About us</a>
-        <a href="/website/index.html#contact" class="nav-link" id="nav-contact">Contact</a>
+        <a href="../index.html" class="nav-link" id="nav-home">Home</a>
+        <a href="../index.html#collections" class="nav-link" id="nav-collections">Collections</a>
+        <a href="../index.html#about" class="nav-link" id="nav-about">About us</a>
+        <a href="../index.html#contact" class="nav-link" id="nav-contact">Contact</a>
       </nav>
       <div class="nav-auth">
         <div class="nav-user" id="nav-user">
